load data into system

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,11 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "--smells"
+                "train",
+                "--smell",
+                "God class",
+                "--model",
+                "decision tree",
             ]
         }
     ]
