--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,11 +11,11 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "train",
-                "--smell",
+                "evaluate",
+                "--smells",
                 "feature envy",
                 "--model",
-                "SVC Linear",
+                "decision tree",
             ]
         }
     ]
