--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bleach==3.1.5
 certifi==2020.6.20
 cffi==1.14.2
 click==7.1.2
+colorama==0.4.3
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -54,6 +55,7 @@ scikit-learn==0.23.2
 scipy==1.5.2
 Send2Trash==1.5.0
 six==1.15.0
+tabulate==0.8.7
 terminado==0.8.3
 testpath==0.4.4
 threadpoolctl==2.1.0
